Temporary fix `Workspace` and `ListView` on mobile
Until we decide on how the `ListView` should be tied to `Workspace`
(for ex: ListView gets expanded into workspace?)

--- a/src/components/WorkSpace/WorkSpace.scss
+++ b/src/components/WorkSpace/WorkSpace.scss
@@ -306,6 +306,7 @@ h5 {
     width: 100vw;
     left: 0;
     height: 90vh;
+    z-index: 13;
   }
 
   .workspaceImage {
